# embedded-sandbox

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel
applications/hello_world/: BUILD  BUILD.bazel
scripts/: lint.sh
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
