"""
Embedded sandbox
"""
module(
    name = "embedded_sandbox",
    repo_name = "embedded_sandbox",
)

# bazel_dep(name = "with_cfg.bzl", version = "0.5.0")

bazel_dep(name = "aspect_bazel_lib", version = "2.9.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "toolchains_llvm", version = "1.2.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains()

bazel_dep(name = "toolchains_arm_gnu", version = "1.0.3")

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")

arm_toolchain.arm_none_eabi(
    version = "9.2.1",
)
use_repo(arm_toolchain, "arm_none_eabi")

register_toolchains(
    "@llvm_toolchain//:all",
    "@arm_none_eabi//toolchain:all",
)

