"""
Embedded sandbox
"""
module(
    name = "embedded_sandbox",
    repo_name = "embedded_sandbox",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "aspect_rules_lint", version = "1.4.4")

bazel_dep(name = "toolchains_llvm", version = "1.4.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
git_override(
    module_name = "toolchains_llvm",
    commit = "188c31a6313ca661e6f9eb3d1fbe6a3ed8d37a7f",
    remote = "https://github.com/bazel-contrib/toolchains_llvm",
)
llvm.toolchain(
    llvm_version = "20.1.4",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains()

bazel_dep(name = "toolchains_arm_gnu", version = "1.0.4")

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")

arm_toolchain.arm_none_eabi(
    version = "9.2.1",
)
use_repo(arm_toolchain, "arm_none_eabi")

register_toolchains(
    "@llvm_toolchain//:all",
    "@arm_none_eabi//toolchain:all",
)

arm_toolchain.aarch64_none_linux_gnu()
use_repo(arm_toolchain, "aarch64_none_linux_gnu")
register_toolchains("@aarch64_none_linux_gnu//toolchain:all")
