load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")

package(default_visibility = ["//:__subpackages__"])

format_multirun(
    name = "format",
    c = "@llvm_toolchain_llvm//:bin/clang-format",
    cc = "@llvm_toolchain_llvm//:bin/clang-format",
    starlark = "@buildifier_prebuilt//:buildifier",
    visibility = ["//:__subpackages__"],
)

format_test(
    name = "format_test",
    size = "small",
    # FIXME: not hermetic, requires libncurses installed on the machine even when non-interactive
    # cc = "@llvm_toolchain_llvm//:bin/clang-format",
    no_sandbox = True,  # Enables formatting the entire workspace, paired with 'workspace' attribute
    starlark = "@buildifier_prebuilt//:buildifier",
    workspace = "//:BUILD.bazel",  # A file in the workspace root, where the no_sandbox mode will run the formatter
)
